# Rustice

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/: main.rs
src/article/: article.rs  examples.rs  mod.rs
src/commands/: mod.rs  parse.rs  process.rs
src/loader/: mod.rs
src/models/: available.rs  mod.rs
