[package]
name = "juridique"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
kalosm = { version = "0.3.2", features = ["cuda", "full", "language"], git = "https://github.com/floneum/floneum" }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = "1.43.0"
