[package]
name = "rustice"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.17.9"
kalosm = { version = "0.3.2", features = ["cuda", "language"], git = "https://github.com/floneum/floneum" }
regex = "1.11.1"
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = "1.43.0"
